@@ -1,14 +1,15 @@
 --- #YAML:1.0
 name: File-Find-Match
-version: 0.05
+version: 0.06
 author: Dylan William Hardison <dhardison@cpan.org>
 abstract: |-
   Perform different actions on files based on file name.
 license: perl
 requires:
+  Test::More: 0
   perl: 5.8.0
 provides:
   File::Find::Match:
     file: lib/File/Find/Match.pm
-    version: 0.05
+    version: 0.06
 generated_by: Module::Build version 0.25
