@@ -3,7 +3,7 @@
 use strict;
 use Test::More tests => 4;
 
-use_ok('File::Find::Match', qw( MATCH IGNORE file dir default));
+use_ok('File::Find::Match', qw( MATCH IGNORE ));
 require_ok('File::Find::Match');
 
 my $finder = new File::Find::Match;
@@ -12,12 +12,8 @@ isa_ok($finder, 'File::Find::Match');
 can_ok($finder,
 	qw(
 		new
-		initialize
 		find
 		rules
-		build_matcher
-		predicate
-		action
 	)
 );
 
